--- a/service/static/index.html
+++ b/service/static/index.html
@@ -21,9 +21,9 @@
         </table>
       </div>
 
-      <!-- FORM -->
-      <div class="col-md-12" id="form_data">
-        <h3>Create, Retrieve, Update, and Delete a Shopcart:</h3>
+      <!-- SHOPCART FORM -->
+      <div class="col-md-6" id="form_data">
+        <h3>C.R.U.D. Shopcart:</h3>
         <div class="well">
           <div class="form-horizontal">
             <div class="form-group">
@@ -60,6 +60,65 @@
           </div> <!-- form horizontal -->
         </div> <!-- end well -->
       </div> <!-- end Form -->
+
+    <!-- FORM -->
+    <div class="col-md-6" id="form_data">
+    <h3>C.R.U.D. CartItem:</h3>
+      <div class="well">
+        <div class="form-horizontal">
+          <div class="well">
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="product_id">Product ID:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="product_id" placeholder="Enter ID of Product">
+              </div>
+            </div>
+            <!-- Shopcart ID -->
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="cartitem_shopcart_id">Shopcart ID:</label>
+              <div class="col-sm-10">
+                <input type="number" class="form-control" id="cartitem_shopcart_id" placeholder="Enter product shopcart ID">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-12">
+                <button type="submit" class="btn btn-primary" id="cartitem-retrieve-btn">Retrieve</button>
+                <button type="submit" class="btn btn-danger" id="cartitem-delete-btn">Delete</button>
+              </div>
+            </div>
+          </div>
+        </div> <!-- form horizontal -->
+
+        <div class="form-horizontal">
+
+          <!-- PRICE -->
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="price">Price:</label>
+            <div class="col-sm-10">
+              <input type="number" class="form-control" id="price" placeholder="Enter product price">
+            </div>
+          </div>
+
+          <!-- QUANTITY -->
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="quantity">Quantity:</label>
+            <div class="col-sm-10">
+              <input type="number" class="form-control" id="quantity" placeholder="Enter product quantity">
+            </div>
+          </div>
+
+          <!-- SUBMIT BUTTONS -->
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-primary" id="cartitem-search-btn">Search</button>
+              <button type="submit" class="btn btn-primary" id="cartitem-clear-btn">Clear</button>
+              <button type="submit" class="btn btn-success" id="cartitem-create-btn">Create</button>
+              <button type="submit" class="btn btn-warning" id="cartitem-update-btn">Update</button>
+            </div>
+          </div>
+        </div> <!-- form horizontal -->
+      </div> <!-- end well -->
+    </div> <!-- end Form -->
 
       <!-- Search Results -->
       <div class="table-responsive col-md-12" id="search_results">
